Small (automated) code cleanups