@@ -18,57 +18,20 @@
 
 package org.zaval.tools.i18n.translator;
 
-import static org.zaval.ui.UiUtils.constrain;
-
-import java.awt.BorderLayout;
-import java.awt.Component;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.FileDialog;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.GridLayout;
-import java.awt.event.ComponentAdapter;
-import java.awt.event.ComponentEvent;
-import java.awt.event.InputEvent;
-import java.awt.event.KeyAdapter;
-import java.awt.event.KeyEvent;
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
-import java.io.DataInputStream;
-import java.io.DataOutputStream;
-import java.io.EOFException;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
-import java.io.StringReader;
-import java.io.StringWriter;
-import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Date;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.StringTokenizer;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.regex.PatternSyntaxException;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
+import org.apache.commons.configuration2.INIConfiguration;
+import org.apache.commons.configuration2.builder.FileBasedConfigurationBuilder;
+import org.apache.commons.configuration2.builder.fluent.Configurations;
+import org.zaval.tools.i18n.translator.generated.UtfParser;
+import org.zaval.ui.AboutDialog;
+import org.zaval.ui.LangDialog;
+import org.zaval.ui.ReplaceDialog;
+import org.zaval.ui.SearchDialog;
+import org.zaval.ui.TranslationTree;
+import org.zaval.ui.TranslationTreeListener;
+import org.zaval.ui.TranslationTreeNode;
+import org.zaval.util.LambdaUtils;
+import org.zaval.util.SafeResourceBundle;
+import org.zaval.xml.XmlReader;
 
 import javax.imageio.ImageIO;
 import javax.swing.ImageIcon;
@@ -93,23 +56,60 @@ import javax.swing.SwingWorker;
 import javax.swing.WindowConstants;
 import javax.swing.border.BevelBorder;
 import javax.swing.text.JTextComponent;
+import java.awt.BorderLayout;
+import java.awt.Component;
+import java.awt.Cursor;
+import java.awt.Dimension;
+import java.awt.FileDialog;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
+import java.awt.GridLayout;
+import java.awt.event.ComponentAdapter;
+import java.awt.event.ComponentEvent;
+import java.awt.event.InputEvent;
+import java.awt.event.KeyAdapter;
+import java.awt.event.KeyEvent;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
+import java.io.BufferedReader;
+import java.io.DataInputStream;
+import java.io.DataOutputStream;
+import java.io.EOFException;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintWriter;
+import java.io.StringReader;
+import java.io.StringWriter;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.text.MessageFormat;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.StringTokenizer;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipFile;
 
-import org.apache.commons.configuration2.INIConfiguration;
-import org.apache.commons.configuration2.builder.FileBasedConfigurationBuilder;
-import org.apache.commons.configuration2.builder.fluent.Configurations;
-import org.zaval.tools.i18n.translator.generated.UtfParser;
-import org.zaval.ui.AboutDialog;
-import org.zaval.ui.LangDialog;
-import org.zaval.ui.ReplaceDialog;
-import org.zaval.ui.SearchDialog;
-import org.zaval.ui.TranslationTree;
-import org.zaval.ui.TranslationTreeListener;
-import org.zaval.ui.TranslationTreeNode;
-import org.zaval.util.LambdaUtils;
-import org.zaval.util.SafeResourceBundle;
-import org.zaval.xml.XmlReader;
+import static org.zaval.ui.UiUtils.constrain;
 
-@SuppressWarnings("serial")
 class Translator extends JFrame implements TranslationTreeListener {
 	private static final String OPTION_PICKLIST = "picklist";
 	private static final String OPTION_ALLOW_DOT = "allowDot";
@@ -467,7 +467,9 @@ class Translator extends JFrame implements TranslationTreeListener {
 
 	public ImageIcon getImageIcon(String name) {
 		try {
-			return new ImageIcon(ImageIO.read(getClass().getClassLoader().getResourceAsStream("org/zaval/ui/images/" + name))); //$NON-NLS-1$
+			InputStream is = getClass().getClassLoader().getResourceAsStream("org/zaval/ui/images/" + name); //$NON-NLS-1$
+			Objects.requireNonNull(is, "Resource not found: " + name);
+			return new ImageIcon(ImageIO.read(is));
 		}
 		catch (IOException ioe) {
 			throw new RuntimeException(ioe);
@@ -563,8 +565,11 @@ class Translator extends JFrame implements TranslationTreeListener {
 	}
 
 	@Override
-	public void onTreeSelectionChanged(Optional<TranslationTreeNode> newSelectedNode) {
-		String newKey = newSelectedNode.map(n -> n.getText()).orElse(null);
+	public void onTreeSelectionChanged(TranslationTreeNode newSelectedNode) {
+		String newKey = null;
+		if (newSelectedNode != null) {
+			newKey = newSelectedNode.getText();
+		}
 		if (!Objects.equals(wasSelectedKey, newKey)) {
 			setTranslations(newKey);
 			invokeAutoFit();
@@ -572,7 +577,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 	}
 
 	@Override
-	public void onDeleteTreeNode(Optional<TranslationTreeNode> selectedNode) {
+	public void onDeleteTreeNode(TranslationTreeNode selectedNode) {
 		onDeleteKey();
 	}
 
@@ -596,8 +601,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 
 	private void onDelete() {
 		Component ccur = getFocusOwner();
-		if (ccur instanceof JTextComponent) {
-			JTextComponent cur = (JTextComponent) ccur;
+		if (ccur instanceof JTextComponent cur) {
 			if (cur.getSelectionStart() > 0) {
 				cur.replaceSelection("");
 			}
@@ -706,7 +710,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 		while (key.endsWith(".")) {
 			key = key.substring(0, key.length() - 1);
 		}
-		if (key.length() <= 0) {
+		if (key.isEmpty()) {
 			return null;
 		}
 		String illegalChar = "";
@@ -1008,7 +1012,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 
 		ed.doModal();
 		String text = ed.getText();
-		if ((text.length() <= 0) || !ed.isApply()) {
+		if ((text.isEmpty()) || !ed.isApply()) {
 			return;
 		}
 
@@ -1040,7 +1044,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 
 		ed.doModal();
 		String text = ed.getText();
-		if ((text.length() <= 0) || !ed.isApply()) {
+		if ((text.isEmpty()) || !ed.isApply()) {
 			return;
 		}
 
@@ -1393,7 +1397,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 		ls.box.setState(true);
 		ls.label = new JLabel(langLab + ":");
 		ls.tf = new JTextArea();
-		ls.tf.setLocale(new Locale(lang, ""));
+		ls.tf.setLocale(Locale.of(lang, ""));
 		ls.tf.addKeyListener(new KeyAdapter() {
 			@Override
 			public void keyPressed(KeyEvent ke) {
@@ -1643,7 +1647,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 		}
 
 		int j;
-		String s1 = stretchPath(pickList.get(0));
+		String s1 = stretchPath(pickList.getFirst());
 		for (j = 0; j < fileMenu.getItemCount(); ++j) {
 			JMenuItem item = fileMenu.getItem(j);
 			if (null != item) {
@@ -1666,16 +1670,18 @@ class Translator extends JFrame implements TranslationTreeListener {
 		if (name.length() < MAX_PICK_LENGTH) {
 			return name;
 		}
-		return name.substring(0, 4) + "..." + name.substring(name.length() - Math.min(name.length() - 7, MAX_PICK_LENGTH - 7));
+		return name.substring(0, 4) + "..." + name.substring(name.length() - (MAX_PICK_LENGTH - 7));
 	}
 
 	private void loadPickList() {
 		removePickList();
 		try {
-			File path = getLegacyConfigFile();
+			Path path = getLegacyConfigFile();
 			INIConfiguration ini = new INIConfiguration();
-			if (path.exists() && path.isFile()) {
-				ini.read(new FileReader(path));
+			if (Files.isRegularFile(path)) {
+				try (BufferedReader reader = Files.newBufferedReader(path)) {
+					ini.read(reader);
+				}
 			}
 
 			pickList.addAll(ini.getList(String.class, OPTION_PICKLIST, Collections.emptyList()));
@@ -1702,7 +1708,7 @@ class Translator extends JFrame implements TranslationTreeListener {
 	private void addToPickList(String name) {
 		if (null != name && !name.isEmpty()) {
 			pickList.remove(name);
-			pickList.add(0, name);
+			pickList.addFirst(name);
 			pickList = pickList.subList(0, Math.min(7, pickList.size()));
 			saveIni();
 		}
@@ -1710,12 +1716,12 @@ class Translator extends JFrame implements TranslationTreeListener {
 
 	private void saveIni() {
 		try {
-			File path = getLegacyConfigFile();
-			if (!path.exists()) {
-				path.createNewFile();
+			Path path = getLegacyConfigFile();
+			if (!Files.exists(path)) {
+				Files.createFile(path);
 			}
 			Configurations configs = new Configurations();
-			FileBasedConfigurationBuilder<INIConfiguration> builder = configs.iniBuilder(path);
+			FileBasedConfigurationBuilder<INIConfiguration> builder = configs.iniBuilder(path.toFile());
 			INIConfiguration ini = builder.getConfiguration();
 			ini.setProperty(OPTION_PICKLIST, pickList);
 			ini.setProperty(OPTION_KEEP_LAST_DIR, keepLastDir);
@@ -1730,8 +1736,8 @@ class Translator extends JFrame implements TranslationTreeListener {
 		}
 	}
 
-	private File getLegacyConfigFile() {
-		return new File(System.getProperty("user.home") + File.separator + TranslatorConstants.LEGACY_CONFIG_FILENAME);
+	private Path getLegacyConfigFile() {
+		return Path.of(System.getProperty("user.home"), TranslatorConstants.LEGACY_CONFIG_FILENAME);
 	}
 
 	private List<LangItem> getLangSet() {
